--- a/index.html
+++ b/index.html
@@ -44,21 +44,32 @@
   <h2 class="title__more-games">Mais Jogos</h2>
 
   <section class="more-games">
-    <a href="">
-      <div class="game-card">
-        <img src="./assets/img/final-fantasy-7-remake.png" alt="">
-        <h3>Final Fantasy VII Remake</h3>
-      </div>
-    </a>
-
     <div class="game-card">
-      <img src="./assets/img/nioh.png" alt="">
-      <h3>Nioh</h3>
+      <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Final Fantasy VII Remake</p>
+        <p class="game-card__description__year">2020</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
     </div>
 
     <div class="game-card">
-      <img src="./assets/img/alex-kid.png" alt="">
-      <h3>Alex Kid</h3>
+      <img class="game-card__img" src="./assets/img/nioh.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Nioh</p>
+        <p class="game-card__description__year">2020</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
+
+
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/alex-kid.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Alex Kidd</p>
+        <p class="game-card__description__year">2021</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
     </div>
   </section>
 
