atualização do menu e cards
adicionado hover nos menus e um novo card Bloodborne

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
       </div>
       <a class="game-card__link" href="#">Ver Mais</a>
     </div>
+
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/bloodborne.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Bloodborne</p>
+        <p class="game-card__description__year">2015</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
   </section>
 
   <footer class="footer">
