Adição do menu responsivo
Adição do menu responsivo. Uma nova página games.html e um script js para manipulação do botao de menu

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 
   <title>Diário Gamer</title>
 </head>
+
 <body>
   <header class="header">
     <h1 class="title">Diário Gamer</h1>
-    <nav class="menu">
-      <a class="menu__link" href="#">Home</a>
-      <a class="menu__link" href="#">Games</a>
-      <a class="menu__link" href="#">Sobre</a>
+    <nav id="nav">
+      <button id="btn-mobile">
+        <span id="hamburguer"></span>
+      </button>
+      <div class="menu">
+        <a class="menu__link" href="/index.html">Home</a>
+        <a class="menu__link" href="/games.html">Games</a>
+        <a class="menu__link" href="/sobre">Sobre</a>
+      </div>
     </nav>
   </header>
 
@@ -85,5 +91,7 @@
   <footer class="footer">
     <h2>Desenvolvido por Fernando Alisson</h2>
   </footer>
+
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
