Atualização das paginas
adição do sobre e games, além de estilização completa e adição de textos

--- a/games.html
+++ b/games.html
@@ -17,14 +17,52 @@
         <span id="hamburguer"></span>
       </button>
       <div class="menu">
-        <a class="menu__link" href="/index.html">Home</a>
-        <a class="menu__link" href="/games.html">Games</a>
-        <a class="menu__link" href="/sobre.html">Sobre</a>
+        <a class="menu__link" href="./index.html">Home</a>
+        <a class="menu__link" href="./games.html">Games</a>
+        <a class="menu__link" href="./sobre.html">Sobre</a>
       </div>
     </nav>
   </header>
 
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque asperiores quidem distinctio dolor, aut nihil placeat, dolore, quas amet sint tempora debitis officiis? Impedit numquam aperiam cum exercitationem nesciunt aliquid consequuntur at repellendus, accusantium enim consectetur ullam beatae dicta laborum error id? Ullam libero assumenda ipsum laboriosam id? Ex quaerat voluptatibus id dignissimos animi voluptate laudantium perspiciatis. Molestias omnis repudiandae repellat voluptate! Et, voluptas cumque earum cum maxime, minus deserunt aliquam ratione dolor tempora nemo atque, suscipit modi molestias aperiam itaque praesentium neque voluptates velit sequi quasi! Vero magni similique nemo in assumenda mollitia delectus explicabo perferendis tempore, quibusdam unde maiores iste debitis iure quidem, corporis ullam veniam voluptatem provident amet. Ea beatae commodi repudiandae perspiciatis quae odit velit ducimus nobis nisi, quos eius unde distinctio iusto ab quod quaerat doloremque facere adipisci minus, tempora atque doloribus odio quis voluptatum! Dicta, consectetur totam! Libero optio rerum doloribus beatae vitae facere corporis sapiente iusto labore nihil expedita, fugit neque dolorum eligendi! Sapiente modi corporis sed illo possimus cum quos ut molestiae voluptates consequuntur dolor sequi inventore qui repellendus laborum, placeat expedita quo at. Quisquam suscipit asperiores repellendus aspernatur distinctio libero, voluptas doloremque recusandae amet veniam laudantium architecto omnis rerum quasi placeat magni impedit ipsum non veritatis ab? Corrupti tenetur, veritatis beatae quidem reiciendis nobis dolorum, odio totam eius eum quos doloribus voluptatem perferendis? Earum pariatur quisquam sequi excepturi expedita dolores quibusdam impedit sapiente maxime, consequuntur vitae, ut omnis reiciendis corrupti maiores consequatur. Maxime voluptatem iusto porro exercitationem, natus tenetur similique non tempore nemo velit a corrupti nulla? Corporis expedita sed, dolorem optio, necessitatibus sequi voluptatum, amet sapiente perspiciatis pariatur deserunt at atque sit nesciunt similique laboriosam repudiandae autem illo neque ducimus ipsa accusamus? Qui fugit, minus quasi adipisci atque facilis sequi voluptas necessitatibus at velit illum hic dignissimos molestiae quaerat aperiam sunt soluta accusamus sed error cupiditate. Iure ut aliquid amet velit quod illum aliquam possimus, architecto fuga deleniti eaque consequatur maiores, tempora suscipit recusandae necessitatibus asperiores et quibusdam soluta explicabo laudantium. Sunt explicabo autem quidem quibusdam error maiores, ex velit aut voluptate consectetur aliquam? Distinctio, obcaecati sit aperiam recusandae dolorem sed repudiandae quae blanditiis doloremque. Ullam eaque quo minus alias totam, voluptas aperiam, sit recusandae ea odit quisquam nulla praesentium quasi distinctio quod explicabo consectetur voluptatibus error, corporis ut magnam voluptate numquam consequatur. Quidem tenetur eligendi earum impedit nostrum obcaecati odit maiores distinctio asperiores fuga minus eos, sequi explicabo velit aliquam rerum ullam maxime? Voluptates ut quisquam sit incidunt culpa reprehenderit dolores accusantium est ea laborum sed officia, illum quos nam necessitatibus magnam repellendus voluptate? Dolore nesciunt labore ad, facere modi corrupti! Soluta sit sint nemo aliquid aut veritatis neque tenetur, corrupti quod corporis dignissimos assumenda magni ipsa ea cum eius quisquam fugiat illum earum iure! Doloremque ex laudantium voluptates velit enim minima consequatur commodi saepe libero aliquid doloribus nesciunt optio quidem at debitis maxime iusto vero, id quo distinctio ut cum? Est voluptates, quidem a debitis magnam reprehenderit non, impedit eaque accusamus fugiat voluptatibus! Expedita corporis sequi eius veniam! Numquam dignissimos quam nesciunt voluptatibus doloremque pariatur sed assumenda, est harum repudiandae consectetur perspiciatis atque itaque autem quibusdam dolorem vero ea sequi possimus quia qui et. Eum repellat vel voluptas voluptate dignissimos quaerat odio quibusdam, aperiam commodi maxime quas, vero distinctio maiores amet pariatur ut voluptatem soluta magnam esse quam id. Voluptas quia modi quasi delectus rerum recusandae, quam distinctio. Distinctio quia possimus maxime illum vel doloremque, sequi quam ipsum earum ullam repellat aut cumque molestias repellendus inventore ipsa, voluptatum minima corporis praesentium exercitationem culpa, ducimus veniam? Facere, aliquam eaque ad, minus asperiores possimus ipsum inventore sed eum suscipit magnam.</p>
+  <h2 class="subtitle">Mais jogos</h2>
+
+  <section class="games more-games">
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Final Fantasy VII Remake</p>
+        <p class="game-card__description__year">2020</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
+
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/nioh.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Nioh</p>
+        <p class="game-card__description__year">2020</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
+
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/alex-kid.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Alex Kidd</p>
+        <p class="game-card__description__year">2021</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
+
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/bloodborne.png" alt="">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Bloodborne</p>
+        <p class="game-card__description__year">2015</p>
+      </div>
+      <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
+  </section>
 
   <footer class="footer">
     <h2>Desenvolvido por Fernando Alisson</h2>
