--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <span id="hamburguer"></span>
       </button>
       <div class="menu">
-        <a class="menu__link" href="/index.html">Home</a>
-        <a class="menu__link" href="/games.html">Games</a>
-        <a class="menu__link" href="/sobre">Sobre</a>
+        <a class="menu__link" href="./index.html">Home</a>
+        <a class="menu__link" href="./games.html">Games</a>
+        <a class="menu__link" href="./sobre.html">Sobre</a>
       </div>
     </nav>
   </header>
@@ -27,12 +27,16 @@
   <main class="main">
     <img class="main__image" src="./assets/img/banner-600.png" alt="banner de vários jogos">
     <p class="main__text">
-      Eae, eu sou o Nando e este é o meu Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e aprender mais sobre a web e suas tecnologias. Aqui vou falar um pouco do que estou jogando e as minhas histórias no mundo dos games, lembrando que não são análises, são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e existem jogos super aclamados pela crítica como é o caso de GTA V que eu não gosto tanto.
-      Espero que gostem e bem vindos ao meu Diário Gamer.
+      Eae, eu sou o Nando e este é o Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e aprender mais sobre a web e suas tecnologias, na aba sobre vocês podem entender essa parte melhor.
     </p>
     <p class="main__text">
-      Eae, este é o meu Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e aprender mais sobre a web e suas tecnologias. Aqui vou falar um pouco do que estou jogando e as minhas histórias no mundo dos games, lembrando que não são análises, são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e existem jogos super aclamados pela crítica como é o caso de GTA V que eu não gosto tanto.
-      Espero que gostem e bem vindos ao meu Diário Gamer.
+      Aqui vou falar um pouco do que estou jogando e as minhas histórias no mundo dos games, lembrando que não são análises, são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e existem jogos super aclamados pela crítica e pela comunidade, como é o caso de GTA V e The Witcher 3 que eu não gosto tanto.
+    </p>
+    <p class="main__text">
+      Não sei como é com vocês, mas os meus games favoritos sempre tem um background, só para dar um exemplo e também  já dando um spoiler do primeiro game do Diário Gamer, The Last of Us veio no momento certo, além de ter sido o primeiro game que joguei no meu PS4 lá em 2015, e sim, eu só joguei The Last Of Us no final de 2015. Eu odiava RPGs, aquelas batalhas por turno que você nem precisava controlar o personagem,  até jogar Final Fantasy XII que é um dos meus games favoritos hoje.
+    </p>
+    <p class="main__text">
+      Também vou me segurar quanto aos spoilers falando só o necessário para não estragar a jogatina de quem for ler. Isso foi só uma introdução ao conteúdo que eu quero compartilhar aqui, espero que gostem e bem vindos ao Diário Gamer.
     </p>
   </main>
 
@@ -47,7 +51,7 @@
     </div>
   </section>
 
-  <h2 class="title__more-games">Mais Jogos</h2>
+  <h2 class="subtitle title__more-games">Mais Jogos</h2>
 
   <section class="more-games">
     <div class="game-card">
