adicao da barra de busca

--- a/games.html
+++ b/games.html
@@ -24,6 +24,12 @@
     </nav>
   </header>
 
+  <div class="barra-busca">
+    <input class="barra-busca__txt-busca" type="text" placeholder="Digite o nome do game">
+    <button id="btn-busca" class="barra-busca__btn-busca">Buscar</button>
+  </div>
+  
+
   <h2 class="subtitle">Mais jogos</h2>
 
   <section class="games more-games">
