--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header">
-    <h1 class="title">Diário Gamer</h1>
+    <h1 class="title"><a href="index.html">Diário Gamer</a></h1>
     <nav id="nav">
       <button id="btn-mobile">
         <span id="hamburguer"></span>
@@ -96,6 +96,6 @@
     <h2>Desenvolvido por Fernando Alisson</h2>
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/menuHamburguer.js"></script>
 </body>
 </html>
