--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="title">Diário Gamer</h1>
+    <h1 class="title"><a href="index.html">Diário Gamer</a></h1>
     <nav id="nav">
       <button id="btn-mobile">
         <span id="hamburguer"></span>
@@ -58,6 +58,6 @@
     <h2>Desenvolvido por Fernando Alisson</h2>
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/menuHamburguer.js"></script>
 </body>
 </html>
