alteracao nas cores
alteracao nas cores

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,25 +28,36 @@
   <main class="main">
     <img class="main__image" src="./assets/img/banner-600.png" alt="banner de vários jogos">
     <p class="main__text">
-      Eae, eu sou o Nando e este é o Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e aprender mais sobre a web e suas tecnologias, na aba sobre vocês podem entender essa parte melhor.
+      Eae, eu sou o Nando e este é o Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e
+      aprender mais sobre a web e suas tecnologias, na aba sobre vocês podem entender essa parte melhor.
     </p>
     <p class="main__text">
-      Aqui vou falar um pouco do que estou jogando e as minhas histórias no mundo dos games, lembrando que não são análises, são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e existem jogos super aclamados pela crítica e pela comunidade, como é o caso de GTA V e The Witcher 3 que eu não gosto tanto.
+      Aqui vou falar um pouco do que estou jogando e as minhas histórias no mundo dos games, lembrando que não são
+      análises, são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e existem
+      jogos super aclamados pela crítica e pela comunidade, como é o caso de GTA V e The Witcher 3 que eu não gosto
+      tanto.
     </p>
     <p class="main__text">
-      Não sei como é com vocês, mas os meus games favoritos sempre tem um background, só para dar um exemplo e também  já dando um spoiler do primeiro game do Diário Gamer, The Last of Us veio no momento certo, além de ter sido o primeiro game que joguei no meu PS4 lá em 2015, e sim, eu só joguei The Last Of Us no final de 2015. Eu odiava RPGs, aquelas batalhas por turno que você nem precisava controlar o personagem,  até jogar Final Fantasy XII que é um dos meus games favoritos hoje.
+      Não sei como é com vocês, mas os meus games favoritos sempre tem um background, só para dar um exemplo e também já
+      dando um spoiler do primeiro game do Diário Gamer, The Last of Us veio no momento certo, além de ter sido o
+      primeiro game que joguei no meu PS4 lá em 2015, e sim, eu só joguei The Last Of Us no final de 2015. Eu odiava
+      RPGs, aquelas batalhas por turno que você nem precisava controlar o personagem, até jogar Final Fantasy XII que é
+      um dos meus games favoritos hoje.
     </p>
     <p class="main__text">
-      Também vou me segurar quanto aos spoilers falando só o necessário para não estragar a jogatina de quem for ler. Isso foi só uma introdução ao conteúdo que eu quero compartilhar aqui, espero que gostem e bem vindos ao Diário Gamer.
+      Também vou me segurar quanto aos spoilers falando só o necessário para não estragar a jogatina de quem for ler.
+      Isso foi só uma introdução ao conteúdo que eu quero compartilhar aqui, espero que gostem e bem vindos ao Diário
+      Gamer.
     </p>
   </main>
 
   <section class="last-game">
     <img src="./assets/img/the-last-of-us-part-1.png" alt="The Last of Us Part 1">
     <div class="last-game__info">
-      <h3 class="last-game__info__game-title">The Last of Us</h3>
-      <p class="last-game__info__game-text">
-        The Last of Us é um jogo de ação e sobrevivência desenvolvido pela Naughty Dog e publicado pela Sony. Lançado em Junho de 2013 exclusivo para Playstation.
+      <h3 class="last-game__title">The Last of Us</h3>
+      <p class="last-game__text">
+        The Last of Us é um jogo de ação e sobrevivência desenvolvido pela Naughty Dog e publicado pela Sony. Lançado em
+        Junho de 2013 exclusivo para Playstation.
       </p>
       <a class="last-game__info__link" href="#">Continuar lendo...</a>
     </div>
@@ -93,9 +105,15 @@
   </section>
 
   <footer class="footer">
-    <h2>Desenvolvido por Fernando Alisson</h2>
+    <div class="social">
+      <a href="#"><img src="./assets/instagram.png" alt="Logo do Instagram"></a>
+      <a href="#"><img src="./assets/twitch.png" alt="Logo do Instagram"></a>
+      <a href="#"><img src="./assets/youtube.png" alt="Logo do Instagram"></a>
+    </div>
+    <h2>Desenvolvido por Fernando Nascimento</h2>
   </footer>
 
   <script src="./assets/js/menuHamburguer.js"></script>
 </body>
+
 </html>
