--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <title>Diário Gamer</title>
@@ -105,12 +106,12 @@
   </section>
 
   <footer class="footer">
-    <div class="social">
+    <div class="footer__social">
       <a href="#"><img src="./assets/instagram.png" alt="Logo do Instagram"></a>
       <a href="#"><img src="./assets/twitch.png" alt="Logo do Instagram"></a>
       <a href="#"><img src="./assets/youtube.png" alt="Logo do Instagram"></a>
     </div>
-    <h2>Desenvolvido por Fernando Nascimento</h2>
+    <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Nascimento</p>
   </footer>
 
   <script src="./assets/js/menuHamburguer.js"></script>
