--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         The Last of Us é um jogo de ação e sobrevivência desenvolvido pela Naughty Dog e publicado pela Sony. Lançado em
         Junho de 2013 exclusivo para Playstation.
       </p>
-      <a class="last-game__info__link" href="#">Continuar lendo...</a>
+      <a class="last-game__info__link" href="./articles/the-last-of-us-part-1.html">Continuar lendo...</a>
     </div>
   </section>
 
