--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <img class="main__image" src="./assets/img/banner-600.png" alt="banner de vários jogos">
-  <main class="main">
+  <main class="main container">
     <p class="main__text">
       Eae, eu sou o Nando e este é o Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e
       aprender mais sobre a web e suas tecnologias, na aba sobre vocês podem entender essa parte melhor.
@@ -52,7 +52,7 @@
     </p>
   </main>
 
-  <section class="last-game">
+  <section class="last-game container">
     <img src="./assets/img/the-last-of-us-part-1.png" alt="The Last of Us Part 1">
     <div class="last-game__info">
       <h3 class="last-game__title">The Last of Us</h3>
@@ -64,9 +64,9 @@
     </div>
   </section>
 
-  <h2 class="subtitle title__more-games">Mais Jogos</h2>
+  <h2 class="subtitle title__more-games container">Mais Jogos</h2>
 
-  <section class="more-games">
+  <section class="more-games container">
     <div class="game-card">
       <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
       <div class="game-card__description">
@@ -102,6 +102,15 @@
         <p class="game-card__description__year">2015</p>
       </div>
       <a class="game-card__link" href="#">Ver Mais</a>
+    </div>
+
+    <div class="game-card">
+      <img class="game-card__img" src="./assets/img/baldurs-gate-3.png" alt="Imagem do game Baldurs Gate 3">
+      <div class="game-card__description">
+        <p class="game-card__description__title">Baldur's Gate 3</p>
+        <p class="game-card__description__year">2023</p>
+      </div>
+      <a class="game-card__link" href="./articles/baldurs-gate-3.html">Ver Mais</a>
     </div>
   </section>
 
