--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
   <title>Sobre</title>
 </head>
+
 <body>
   <header class="header">
     <h1 class="title"><a href="index.html">Diário Gamer</a></h1>
@@ -23,41 +25,55 @@
     </nav>
   </header>
 
-  <main class="main">
+  <main class="main container">
     <p class="main__text">
-      Bom, eu sou o Nando, estudante de desenvolvimento Front End, gosto muito de games e de tecnologia. Sou o criador, desenvolvedor e editor deste site.
+      Bom, eu sou o Nando, estudante de desenvolvimento Front End, gosto muito de games e de tecnologia. Sou o criador,
+      desenvolvedor e editor deste site.
     </p>
     <p class="main__text">
-      Meu primeiro contato com games foi através do meu tio, ele tinha o primeiro PlayStation e eu adorava ver ele jogar, mesmo não entendendo muito bem o que estava acontecendo. Pouco tempo depois ganhei meu primeiro vídeo game, um Master System, é daí que vem meu carinho pelo Sonic, eu tinha uns 6 anos e, eu passei um bom tempo só jogando Sonic, eu não tinha nenhum outro jogo, mas eu não me importava, zerei Sonic várias e várias vezes. Depois de um tempo minha mãe comprou um jogo de ninja que eu nem sei o nome, mas eu lembro da música de abertura até hoje. Meu vídeo game seguinte foi um Super Nintendo, depois PlayStation, PlayStation 2, Xbox 360, PlayStation 4 e os consoles da atual geração.
+      Meu primeiro contato com games foi através do meu tio, ele tinha o primeiro PlayStation e eu adorava ver ele
+      jogar, mesmo não entendendo muito bem o que estava acontecendo. Pouco tempo depois ganhei meu primeiro vídeo game,
+      um Master System, é daí que vem meu carinho pelo Sonic, eu tinha uns 6 anos e, eu passei um bom tempo só jogando
+      Sonic, eu não tinha nenhum outro jogo, mas eu não me importava, zerei Sonic várias e várias vezes. Depois de um
+      tempo minha mãe comprou um jogo de ninja que eu nem sei o nome, mas eu lembro da música de abertura até hoje. Meu
+      vídeo game seguinte foi um Super Nintendo, depois PlayStation, PlayStation 2, Xbox 360, PlayStation 4 e os
+      consoles da atual geração.
     </p>
     <p class="main__text">
-      Como mencionei no início, eu sou desenvolvedor e é por isso que decidi criar o Diário Gamer, porque eu preciso de um projeto para o meu portfólio e eu não queria só pegar um projeto de algum curso, eu queria desenvolver algo meu. Mas eu não queria desenvolver qualquer coisa, eu queria algo que eu pudesse publicar, algo que eu pudesse manter em constante atualização conforme eu fosse aprendendo novas tecnologias.
+      Como mencionei no início, eu sou desenvolvedor e é por isso que decidi criar o Diário Gamer, porque eu preciso de
+      um projeto para o meu portfólio e eu não queria só pegar um projeto de algum curso, eu queria desenvolver algo
+      meu. Mas eu não queria desenvolver qualquer coisa, eu queria algo que eu pudesse publicar, algo que eu pudesse
+      manter em constante atualização conforme eu fosse aprendendo novas tecnologias.
     </p>
     <p class="main__text">
-      A minha escolha por ser desenvolvedor surgiu da curiosidade de saber como um game é criado, daí eu fui pra faculdade e comecei a estudar programação, mas foi quando eu comecei a aprender Front End que meus olhos brilharam, principalmente quando aprendi CSS, esse foi o caminho que escolhi seguir.
+      A minha escolha por ser desenvolvedor surgiu da curiosidade de saber como um game é criado, daí eu fui pra
+      faculdade e comecei a estudar programação, mas foi quando eu comecei a aprender Front End que meus olhos
+      brilharam, principalmente quando aprendi CSS, esse foi o caminho que escolhi seguir.
     </p>
     <p class="main__text">
-      Esse site é o resultado de tudo que aprendi e do que ainda estou aprendendo, esse site também vai mostrar o meu caminho como desenvolvedor.
+      Esse site é o resultado de tudo que aprendi e do que ainda estou aprendendo, esse site também vai mostrar o meu
+      caminho como desenvolvedor.
     </p>
     <p class="main__text">
-      Vou deixar abaixo os links das minhas redes sociais, link da Twitch e também o link de um antigo canal do YouTube pra quem tiver curiosidade, já não produzo mais conteúdo em nenhum deles, acredito que eu escrevo melhor do que falo, então vou ficar só por aqui mesmo. Qualquer sugestão ou crítica pode me mandar também.
+      Vou deixar abaixo os links das minhas redes sociais, link da Twitch e também o link de um antigo canal do YouTube
+      pra quem tiver curiosidade, já não produzo mais conteúdo em nenhum deles, acredito que eu escrevo melhor do que
+      falo, então vou ficar só por aqui mesmo. Qualquer sugestão ou crítica pode me mandar também.
     </p>
     <p class="main__text">
       Futuramente vou adicionar um fórum de discussão.
     </p>
   </main>
 
-  <ul class="social__links">
-    <li><a href="">Instragram</a></li>
-    <li><a href="">Twitter</a></li>
-    <li><a href="">YouTube</a></li>
-    <li><a href="">Twitch</a></li>
-  </ul>
-
   <footer class="footer">
-    <h2>Desenvolvido por Fernando Alisson</h2>
+    <div class="footer__social">
+      <a href="#"><img src="./assets/instagram.png" alt="Logo do Instagram"></a>
+      <a href="#"><img src="./assets/twitch.png" alt="Logo do Instagram"></a>
+      <a href="#"><img src="./assets/youtube.png" alt="Logo do Instagram"></a>
+    </div>
+    <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Nascimento</p>
   </footer>
 
   <script src="./assets/js/menuHamburguer.js"></script>
 </body>
+
 </html>
