--- a/games.html
+++ b/games.html
@@ -38,57 +38,69 @@
 
   <section class="games more-games container card-colection">
     <div class="game-card">
-      <img class="game-card__img" src="./assets/img/the-last-of-us-part-1.png" alt="">
-      <div class="game-card__description">
-        <p class="game-card__description__title">The Last of Us Parte I</p>
-        <p class="game-card__description__year">2013</p>
-      </div>
-      <a class="game-card__link" href="./articles/the-last-of-us-part-1.html">Ver Mais</a>
+      <a href="./articles/the-last-of-us-part-1.html">
+        <img class="game-card__img" src="./assets/img/the-last-of-us-part-1.png" alt="">
+        <div class="game-card__description">
+          <p class="game-card__description__title">The Last of Us Parte I</p>
+          <p class="game-card__description__year">2013</p>
+        </div>
+        <p class="game-card__p">Ver Mais</p>
+      </a>
     </div>
 
     <div class="game-card">
-      <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
-      <div class="game-card__description">
-        <p class="game-card__description__title">Final Fantasy VII Remake</p>
-        <p class="game-card__description__year">2020</p>
-      </div>
-      <a class="game-card__link" href="#">Ver Mais</a>
+      <a href="">
+        <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
+        <div class="game-card__description">
+          <p class="game-card__description__title">Final Fantasy VII Remake</p>
+          <p class="game-card__description__year">2020</p>
+        </div>
+        <p class="game-card__p">Ver Mais</p>
+      </a>
     </div>
 
     <div class="game-card">
-      <img class="game-card__img" src="./assets/img/nioh.png" alt="">
-      <div class="game-card__description">
-        <p class="game-card__description__title">Nioh</p>
-        <p class="game-card__description__year">2020</p>
-      </div>
-      <a class="game-card__link" href="#">Ver Mais</a>
+      <a href="">
+        <img class="game-card__img" src="./assets/img/nioh.png" alt="">
+        <div class="game-card__description">
+          <p class="game-card__description__title">Nioh</p>
+          <p class="game-card__description__year">2020</p>
+        </div>
+        <p class="game-card__p">Ver Mais</p>
+      </a>
     </div>
 
     <div class="game-card">
-      <img class="game-card__img" src="./assets/img/alex-kid.png" alt="">
-      <div class="game-card__description">
-        <p class="game-card__description__title">Alex Kidd</p>
-        <p class="game-card__description__year">2021</p>
-      </div>
-      <a class="game-card__link" href="#">Ver Mais</a>
+      <a href="">
+        <img class="game-card__img" src="./assets/img/alex-kid.png" alt="">
+        <div class="game-card__description">
+          <p class="game-card__description__title">Alex Kidd</p>
+          <p class="game-card__description__year">2021</p>
+        </div>
+        <p class="game-card__p">Ver Mais</p>
+      </a>
     </div>
 
     <div class="game-card">
-      <img class="game-card__img" src="./assets/img/bloodborne.png" alt="">
-      <div class="game-card__description">
-        <p class="game-card__description__title">Bloodborne</p>
-        <p class="game-card__description__year">2015</p>
-      </div>
-      <a class="game-card__link" href="#">Ver Mais</a>
+      <a href="">
+        <img class="game-card__img" src="./assets/img/bloodborne.png" alt="">
+        <div class="game-card__description">
+          <p class="game-card__description__title">Bloodborne</p>
+          <p class="game-card__description__year">2015</p>
+        </div>
+        <p class="game-card__p">Ver Mais</p>
+      </a>
     </div>
 
     <div class="game-card">
-      <img class="game-card__img" src="./assets/img/baldurs-gate-3.png" alt="Imagem do game Baldurs Gate 3">
-      <div class="game-card__description">
-        <p class="game-card__description__title">Baldur's Gate 3</p>
-        <p class="game-card__description__year">2023</p>
-      </div>
-      <a class="game-card__link" href="./articles/baldurs-gate-3.html">Ver Mais</a>
+      <a href="./articles/baldurs-gate-3.html">
+        <img class="game-card__img" src="./assets/img/baldurs-gate-3.png" alt="Imagem do game Baldurs Gate 3">
+        <div class="game-card__description">
+          <p class="game-card__description__title">Baldur's Gate 3</p>
+          <p class="game-card__description__year">2023</p>
+        </div>
+        <p class="game-card__p">Ver Mais</p>
+      </a>
     </div>
   </section>
 
