artigo final fantasy 7 remake adicionado

--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
     <div class="last-game__info">
       <h3 class="last-game__title">The Last of Us</h3>
       <p class="last-game__text">
-        The Last of Us é um jogo de ação e sobrevivência desenvolvido pela Naughty Dog e publicado pela Sony. Lançado em
-        Junho de 2013 exclusivo para Playstation.
+        Só fui jogar The Last of Us em 2016, bastante tempo depois do lançamento, eu não tinha PS3, entrei na onda do
+        Xbox 360, mas já tinha um tempo que eu não jogava nada. Foi uma época onde eu só estudava e trabalhava, me
+        afastei um pouco dos games porque não sobrava muito tempo pra jogar, até que dois amigos do trabalho me
+        convenceram a comprar o PS4, eu não queria, mas que bom que eu comprei, e o game que veio junto com o console
+        foi The Last of Us.
       </p>
       <a class="last-game__info__link" href="./articles/the-last-of-us-part-1.html">Continuar lendo...</a>
     </div>
@@ -68,7 +71,7 @@
 
   <section class="more-games container">
     <div class="game-card">
-      <a href="">
+      <a href="./articles/final-fantasy-7-remake.html">
         <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
         <div class="game-card__description">
           <p class="game-card__description__title">Final Fantasy VII Remake</p>
