--- a/games.html
+++ b/games.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="game-card">
-      <a href="">
+      <a href="./articles/final-fantasy-7-remake.html">
         <img class="game-card__img" src="./assets/img/final-fantasy-7-remake.png" alt="">
         <div class="game-card__description">
           <p class="game-card__description__title">Final Fantasy VII Remake</p>
