artigo death stranding criado

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     </div>
 
     <div class="game-card">
-      <a href="">
-        <img class="game-card__img" src="./assets/img/nioh.png" alt="">
+      <a href="./articles/death-stranding.html">
+        <img class="game-card__img" src="./assets/img/death-stranding.jpg" alt="">
         <div class="game-card__description">
-          <p class="game-card__description__title">Nioh</p>
-          <p class="game-card__description__year">2020</p>
+          <p class="game-card__description__title">Death Stranding</p>
+          <p class="game-card__description__year">2019</p>
         </div>
         <p class="game-card__p">Ver Mais</p>
       </a>
