atualizacao do sobre

--- a/sobre.html
+++ b/sobre.html
@@ -41,14 +41,9 @@
     </p>
     <p class="main__text">
       Como mencionei no início, eu sou desenvolvedor e é por isso que decidi criar o Diário Gamer, porque eu preciso de
-      um projeto para o meu portfólio e eu não queria só pegar um projeto de algum curso, eu queria desenvolver algo
-      meu. Mas eu não queria desenvolver qualquer coisa, eu queria algo que eu pudesse publicar, algo que eu pudesse
-      manter em constante atualização conforme eu fosse aprendendo novas tecnologias.
-    </p>
-    <p class="main__text">
-      A minha escolha por ser desenvolvedor surgiu da curiosidade de saber como um game é criado, daí eu fui pra
-      faculdade e comecei a estudar programação, mas foi quando eu comecei a aprender Front End que meus olhos
-      brilharam, principalmente quando aprendi CSS, esse foi o caminho que escolhi seguir.
+      um projeto para o meu portfólio, eu já tenho muitos projetos de cursos livres que fiz, eu queria desenvolver algo
+      meu, mas eu não queria desenvolver qualquer coisa, eu queria algo que eu pudesse publicar, algo que eu pudesse
+      manter em constante atualização conforme eu fosse aprendendo novas tecnologias, daí decidi criar um diário.
     </p>
     <p class="main__text">
       Esse site é o resultado de tudo que aprendi e do que ainda estou aprendendo, esse site também vai mostrar o meu
