atualizacao do nome no rodape

--- a/games.html
+++ b/games.html
@@ -110,7 +110,7 @@
       <a href="#"><img src="./assets/twitch.png" alt="Logo do Instagram"></a>
       <a href="#"><img src="./assets/youtube.png" alt="Logo do Instagram"></a>
     </div>
-    <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Nascimento</p>
+    <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Alisson</p>
   </footer>
 
   <script src="./assets/js/menuHamburguer.js"></script>
