--- a/sobre.html
+++ b/sobre.html
@@ -65,7 +65,7 @@
       <a href="#"><img src="./assets/twitch.png" alt="Logo do Instagram"></a>
       <a href="#"><img src="./assets/youtube.png" alt="Logo do Instagram"></a>
     </div>
-    <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Nascimento</p>
+    <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Alisson</p>
   </footer>
 
   <script src="./assets/js/menuHamburguer.js"></script>
