atualizacao da introducao do index

--- a/index.html
+++ b/index.html
@@ -30,23 +30,26 @@
   <main class="main container">
     <p class="main__text">
       Eae, eu sou o Nando e este é o Diário Gamer, um espaço que eu criei para escrever sobre meus games favoritos e
-      aprender mais sobre a web e suas tecnologias, na aba sobre vocês podem entender essa parte melhor.
+      aprender mais sobre tecnologia e programação, na aba sobre eu explico melhor essa parte melhor.
     </p>
     <p class="main__text">
-      Aqui vou falar um pouco do que estou jogando e as minhas histórias no mundo dos games, lembrando que não são
-      análises, são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e existem
-      jogos super aclamados pela crítica e pela comunidade, como é o caso de GTA V e The Witcher 3 que eu não gosto
-      tanto.
+      Vou escrever sobre o que estou jogando e as minhas histórias no mundo dos games, lembrando que não são análises,
+      são apenas as minhas experiências, existem jogos tecnicamente horríveis que eu gosto bastante e jogos super
+      aclamados pela crítica e pela comunidade, como é o caso de GTA V e The Witcher 3 que eu não gosto tanto, mas são
+      muito bons.
     </p>
     <p class="main__text">
       Não sei como é com vocês, mas os meus games favoritos sempre tem um background, só para dar um exemplo e também já
       dando um spoiler do primeiro game do Diário Gamer, The Last of Us veio no momento certo, além de ter sido o
-      primeiro game que joguei no meu PS4 lá em 2015, e sim, eu só joguei The Last Of Us no final de 2015. Eu odiava
-      RPGs, aquelas batalhas por turno que você nem precisava controlar o personagem, até jogar Final Fantasy XII que é
-      um dos meus games favoritos hoje.
+      primeiro game que joguei no meu PS4 lá em 2015, e sim, eu só joguei The Last Of Us no final de 2015. Eu também
+      odiava RPGs, aquelas batalhas por turno que você nem precisava controlar o personagem, até jogar Final Fantasy XII
+      que é um dos meus games favoritos até hoje e foi o que me abriu a mente para novos games do gênero e os antigos
+      Final Fantasy.
     </p>
     <p class="main__text">
       Também vou me segurar quanto aos spoilers falando só o necessário para não estragar a jogatina de quem for ler.
+    </p>
+    <p class="main__text">
       Isso foi só uma introdução ao conteúdo que eu quero compartilhar aqui, espero que gostem e bem vindos ao Diário
       Gamer.
     </p>
