--- a/artigos.html
+++ b/artigos.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/card-colection.css">
 
-  <title>Games</title>
+  <title>Artigos</title>
 </head>
 
 <body>
