update de mais jogos para artigos

--- a/artigos.html
+++ b/artigos.html
@@ -34,7 +34,7 @@
   </div>
 
 
-  <h2 class="container mais-jogos">Mais jogos</h2>
+  <h2 class="container mais-jogos">Artigos</h2>
 
   <section class="games more-games container card-colection">
     <div class="game-card">
